--- a/source/travel_project/travel_planner/templates/categories.html
+++ b/source/travel_project/travel_planner/templates/categories.html
@@ -188,10 +188,11 @@
         <div class="nav-container">
             <a href="/" class="logo">
                 <h1>VoyageVault</h1>
-                <p>Venture out, find yourself</p>
+                <p>Venture out, Get your trip ready</p>
             </a>
             <div class="nav-links">
                 <a href="/">HOME</a>
+                <a href="/contact">CONTACT</a>
                 <a href="/logout">LOG OUT</a>
             </div>
         </div>
@@ -208,27 +209,23 @@
                 <div class="category-image">
                     <img src="https://plus.unsplash.com/premium_photo-1697730370661-51bf72769ff6?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8a2hhanVyYWhvfGVufDB8fDB8fHww" alt="Religious travel destination showing a golden temple" />
                 </div>
-                <a href="/religious" class="Religious"> <h3>Religious</h3> </a>
+                <a href="/religious" class="religious"><h3>Religious</h3></a>
             </div>
 
             <div class="category">
                 <div class="category-image">
                     <img src="https://etimg.etb2bimg.com/photo/87976292.cms" alt="Leisure travel showing a person relaxing on a beach" />
                 </div>
-                <a href="/leisure" class="leisure"> <h3>leisure</h3> </a>
+                <a href="/leisure" class="leisure"><h3>leisure</h3></a>
             </div>
 
             <div class="category">
                 <div class="category-image">
                     <img src="https://media.timeout.com/images/102499685/750/562/image.jpg" alt="Adventure travel showing a person skydiving" />
                 </div>
-                <a href="/adventure" class="adventure"> <h3>adventure</h3> </a>
+                <a href="/adventure" class="adventure"><h3>adventure</h3></a>
             </div>
         </div>
-
-        <a href="/" class="back-button">
-            <span>←</span>
-        </a>
     </main>
 
     <!-- Font Awesome for icons -->
