--- a/source/travel_project/travel_planner/templates/home.html
+++ b/source/travel_project/travel_planner/templates/home.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VoyageVault - Venture out, Get your trip planned</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
         /* Base styles */
         * {
@@ -229,9 +231,10 @@
     <!-- Header with social icons and email -->
     <div class="header">
         <div class="social-icons">
-            <a href="#"><i class="fa fa-facebook">f</i></a>
-            <a href="#"><i class="fa fa-instagram">ⓘ</i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
+        
         <a href="mailto:mail@voyagevault.in" class="contact-email">mail@voyagevault.in</a>
     </div>
     
